--- a/Views/Products/Index.cshtml
+++ b/Views/Products/Index.cshtml
@@ -5,7 +5,7 @@
       Layout = "../../Views/Shared/_AdminLayout.cshtml";
 }
 
-<h2>Index</h2>
+<h2>Product Manager</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
@@ -33,6 +33,9 @@
         <th>
             Color
         </th>
+        <th>
+            Ram
+        </th>
         <th></th>
     </tr>
 
@@ -42,10 +45,18 @@
             @Html.DisplayFor(modelItem => item.names)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.images)
+            <img class="h-10"
+                 src="~/@Html.DisplayFor(modelItem => item.images)"
+                 alt="" />
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.price)
+            $@Html.DisplayFor(modelItem => item.price)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.quantity)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.rate)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.brand.names)
@@ -54,9 +65,12 @@
             @Html.DisplayFor(modelItem => item.color.names)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.id_product }) |
-            @Html.ActionLink("Details", "Details", new { id=item.id_product }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.id_product })
+            @Html.DisplayFor(modelItem => item.ram)
+        </td>
+        <td>
+            @Html.ActionLink("Edit", "Edit", new { id = item.id_product }) |
+            @Html.ActionLink("Details", "Details", new { id = item.id_product }) |
+            @Html.ActionLink("Delete", "Delete", new { id = item.id_product })
         </td>
     </tr>
 }
