--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -36,6 +36,7 @@
                         @*Cart*@
                         <a class="lg:inline-block py-[10px] rounded-xl transition duration-200"
                            href="@Url.Action("ShowToCart", "Shopping", new {id = ((WebApplication1.Models.user)Session["email"]).id_user})"><i class="fa-solid fa-cart-shopping text-black"></i></a>
+                        @Html.Action("BagCart", "Shopping")
                     }
                     else if (Session["email"] == null)
                     {
@@ -47,7 +48,8 @@
 
                         @*Cart*@
                         <a class="lg:inline-block py-[10px] rounded-xl transition duration-200"
-                           href="@Url.Action("ShowToCart", "ShoppingCart")"><i class="fa-solid fa-cart-shopping text-black"></i></a>
+                           href="@Url.Action("ShowToCart", "ShoppingCart")"><i class="fa-solid fa-cart-shopping text-black"></i> </a>
+                        @Html.Action("BagCart", "ShoppingCart")
                     }
                     @*Search*@
                     <a class="lg:inline-block py-[10px] rounded-xl transition duration-200"
