--- a/Views/Shopping/Buy_now.cshtml
+++ b/Views/Shopping/Buy_now.cshtml
@@ -1,18 +1,15 @@
-﻿
+﻿@model WebApplication1.Models.cart
+
 @{
     ViewBag.Title = "ShowToCart";
-    Layout = "~/Views/Shared/_Layout.cshtml";
 }
-@model WebApplication1.Models.Carts
-
 <main class="p-6">
-    <div class="text-neutral-500 text-xs px-4">
-        (@Session["Quantity_pro"] items)
-    </div>
     <div class="flex mb-lg-5">
-        <a class="text-2xl font-bold" href="/Home/Index">Continue Shopping</a>
+        <a class="text-2xl font-bold" href="/Home/Index">Shopping</a>
+        <div class="text-neutral-500 text-xs px-4">
+            (01 Items)
+        </div>
     </div>
-
 
     @if (Model != null)
     {
@@ -25,75 +22,72 @@
                     <div class="col">Price</div>
                     <div class="col">Quantity</div>
                     <div class="col">Total Price</div>
-                    <div class="col">Remove</div>
+                    <div class="col"></div>
 
 
                 </div>
-                @foreach (var item in Model.Items)
-                {
-                    double total = Convert.ToDouble(item.Shopping_product.price.Value * item.Shopping_quantity);
 
-                    @*body*@
-                    <div class="row flex my-3 py-4 pr-4 shadow-sm">
-                        @*Product*@
-                        <div class="col flex flex-wrap w-50">
-                            <img src="~/@item.Shopping_product.images"
-                                 class="h-15" />
-                        </div>
-                        <div class="col flex flex-wrap w-50">
-                            <div class="col grid-rows-4">
-                                <div class="font-medium">@Html.DisplayFor(model => item.Shopping_product.names)</div>
-                                <div class="font-light text-xs">@Html.DisplayFor(model => item.Shopping_product.brand.names)</div>
-                                <div class="font-light text-xs">@Html.DisplayFor(model => item.Shopping_product.color.names)</div>
-                                <a href="/Shopping/Details_Pro/@item.Shopping_product.id_product" class="text-blue-600 font-semibold text-xs mt-4">Learn More 🡥</a>
-                            </div>
-                        </div>
-
-                        @*Price*@
-                        <div class="col">
-                            <div class="flex">
-                                $@Html.DisplayFor(model => item.Shopping_product.price)
-                            </div>
-                        </div>
-
-                        @*Quantity*@
-                        <div class="col">
-                            <div class="flex">
-                                <a href="/ShoppingCart/btn_Decrease/@item.Shopping_product.id_product" class="text-center text-black py-1 px-2.5 bg-gray-100 hover:bg-gray-200 rounded-md">
-                                    <i class="fa-solid fa-minus text-xs"></i>
-                                </a>
-                                <input type="text" value="@item.Shopping_quantity" readonly="readonly" style="width: 30px;" class="text-center" />
-                                <a href="/ShoppingCart/btn_Increase/@item.Shopping_product.id_product" class="text-center text-black py-1 px-2.5 bg-gray-100 hover:bg-gray-200 rounded-md">
-                                    <i class="fa-solid fa-plus text-xs"></i>
-                                </a>
-
-                            </div>
-                        </div>
-
-                        <div class="col" style="text-align:center">
-                            <div class="flex">
-                                $@total.00
-                            </div>
-                        </div>
-
-
-                        @*Remove/Check*@
-                        <div class="col">
-                            <div class="flex">
-                                <a href="/Shopping/RemoveCart/@item.Shopping_product.id_product" class="bg-red-100 text-center py-1 px-2.5 hover:bg-red-200 rounded-md">
-                                    <i class="fa-solid fa-xmark text-red-600 text-xs"></i>
-                                </a>
-                            </div>
+                @*body*@
+                <div class="row flex my-3 py-4 pr-4 shadow-sm">
+                    @*Product*@
+                    <div class="col flex flex-wrap w-50">
+                        <img src="~/@Html.DisplayFor(model => model.id_product)"
+                             class="h-15" />
+                    </div>
+                    <div class="col flex flex-wrap w-50">
+                        <div class="col grid-rows-4">
+                            <div class="font-medium">@Html.DisplayFor(model => model.product.names)</div>
+                            <div class="font-light text-xs">@Html.DisplayFor(model => model.product.brand.names)</div>
+                            <div class="font-light text-xs">@Html.DisplayFor(model => model.product.color.names)</div>
+                            <a href="/Shopping/Details_Pro/@Html.DisplayFor(model => model.product.id_product)" class="text-blue-600 font-semibold text-xs mt-4">Learn More 🡥</a>
                         </div>
                     </div>
-                }
+
+                    @*Price*@
+                    <div class="col">
+                        <div class="flex">
+                            $@Html.DisplayFor(model => model.product.price)
+                        </div>
+                    </div>
+
+                    @*Quantity*@
+                    <div class="col">
+                        <div class="flex">
+                            <a href="/Shopping/btn_Decrease/@Html.DisplayFor(model => model.product.id_product)" class="text-center text-black py-1 px-2.5 bg-gray-100 hover:bg-gray-200 rounded-md">
+                                <i class="fa-solid fa-minus text-xs"></i>
+                            </a>
+                            <div class="py-1 px-4 text-center">@Html.DisplayFor(model => model.product.quantity)</div>
+                            <a href="/Shopping/btn_Increase/@Html.DisplayFor(model =>model.product.id_product)" class="text-center text-black py-1 px-2.5 bg-gray-100 hover:bg-gray-200 rounded-md">
+                                <i class="fa-solid fa-plus text-xs"></i>
+                            </a>
+
+                        </div>
+                    </div>
+
+                    <div class="col" style="text-align:center">
+                        <div class="flex">
+                            $@ViewBag.total.00
+                        </div>
+                    </div>
+
+
+                    @*Remove/Check*@
+                    <div class="col">
+                        <div class="flex justify-content-between">
+                            <a href="/Shopping/RemoveCart/@Html.DisplayFor(model => model.id_product)" class="bg-red-100 text-center py-1 px-2.5 hover:bg-red-200 rounded-md">
+                                <i class="fa-solid fa-xmark text-red-600 text-xs"></i>
+                            </a>
+                            @*<input type="checkbox" class="rounded-md border-gray-200 bg-white p-2" />*@
+                        </div>
+                    </div>
+                </div>
             </div>
 
             @*Place Order*@
             <div class="col-lg-3">
                 <div class="font-medium mb-2">Shipping Info</div>
                 <div class="text-gray-400 font-light text-xs">Fill your order</div>
-                @using (Html.BeginForm("CheckOut", "ShoppingCart"))
+                @using (Html.BeginForm("Buy_now", "Shopping"))
                 {
 
                     @*Email*@
@@ -193,56 +187,60 @@
                             </label>
                         </div>
                     </div>
-                    @*Promo Code*@
-                    <div class="font-medium my-2">Apply Coupon</div>
-                    <div class="text-gray-400 font-light text-xs">Using A Promo Code?</div>
-
-                    @*Enter promo-code*@
-                    <div class="flex justify-center mt-2 mb-4 justify-between">
-                        <div class="relative w-75" data-te-input-wrapper-init>
-                            <input type="text"
-                                   class="font-light peer block min-h-[auto] w-full pb-2 border-b outline-none bg-transparent py-[0.32rem] px-3 leading-[1.6] transition-all duration-200 ease-linear focus:placeholder:opacity-100 data-[te-input-state-active]:placeholder:opacity-100 motion-reduce:transition-none dark:text-neutral-200 dark:placeholder:text-neutral-200 [&:not([data-te-input-placeholder-active])]:placeholder:opacity-0"
-                                   @*id="exampleFormControlInputText"*@
-                                   placeholder="Enter your promo code"
-                                   value="" name="promocode" />
-                            <label for="exampleFormControlInputText"
-                                   class="pointer-events-none text-md absolute top-0 left-3 mb-0 max-w-[90%] origin-[0_0] truncate pt-[0.37rem] leading-[1.6] text-neutral-500 transition-all duration-200 ease-out peer-focus:-translate-y-[0.9rem] peer-focus:scale-[0.8] peer-focus:text-primary peer-data-[te-input-state-active]:-translate-y-[0.9rem] peer-data-[te-input-state-active]:scale-[0.8] motion-reduce:transition-none dark:text-neutral-200 dark:peer-focus:text-neutral-200">
-                                Promo Code
-                            </label>
-                        </div>
-
-                        @*Apply Promo-Code*@
-                        <a class="bg-yellow-300 py-2.5 px-3 text-black text-xs font-semibold ml-2 rounded-md" style="width:fit-content; height: fit-content;">Apply</a>
-                    </div>
-
-
-                    @*Order Sumamry*@
-                    <div class="">
-                        <div class="mb-2 font-medium pb-2 my-2 border-b">Order Summary</div>
-                        <div class="d-flex justify-content-between my-2">
-                            <p>Total</p>
-                            <p>$@Session["TotalCost"].00</p>
-                        </div>
-
-                        <div class="d-flex justify-content-between mb-2">
-                            <p>Shipping</p>
-                            <p>$@Session["Shipping"].00</p>
-                        </div>
-
-                        <div class="d-flex justify-content-between pb-2 mb-2 border-b">
-                            <p>Discount</p>
-                            <p>$0.00</p>
-                        </div>
-                        <div class="d-flex justify-content-between my-2">
-                            <p>Subtotal</p>
-                            <p>$@Session["Total_order"].00</p>
-                        </div>
-
-                        <input class="btn bg-blue-600 hover:bg-blue-800 w-full rounded-md text-white text-center text-md font-medium py-2 mt-2" type="submit" value="Checkout" />
-
-                    </div>
+                    <input type="submit" value="Update" />
                 }
+                @*Promo Code*@
+                <div class="font-medium my-2">Apply Coupon</div>
+                <div class="text-gray-400 font-light text-xs">Using A Promo Code?</div>
+
+                @*Enter promo-code*@
+                <div class="flex justify-center mt-2 mb-4 justify-between">
+                    <div class="relative w-75" data-te-input-wrapper-init>
+                        <input type="text"
+                               class="font-light peer block min-h-[auto] w-full pb-2 border-b outline-none bg-transparent py-[0.32rem] px-3 leading-[1.6] transition-all duration-200 ease-linear focus:placeholder:opacity-100 data-[te-input-state-active]:placeholder:opacity-100 motion-reduce:transition-none dark:text-neutral-200 dark:placeholder:text-neutral-200 [&:not([data-te-input-placeholder-active])]:placeholder:opacity-0"
+                               @*id="exampleFormControlInputText"*@
+                               placeholder="Enter your promo code"
+                               value="" name="promocode" />
+                        <label for="exampleFormControlInputText"
+                               class="pointer-events-none text-md absolute top-0 left-3 mb-0 max-w-[90%] origin-[0_0] truncate pt-[0.37rem] leading-[1.6] text-neutral-500 transition-all duration-200 ease-out peer-focus:-translate-y-[0.9rem] peer-focus:scale-[0.8] peer-focus:text-primary peer-data-[te-input-state-active]:-translate-y-[0.9rem] peer-data-[te-input-state-active]:scale-[0.8] motion-reduce:transition-none dark:text-neutral-200 dark:peer-focus:text-neutral-200">
+                            Promo Code
+                        </label>
+                    </div>
+
+                    @*Apply Promo-Code*@
+                    <a class="bg-yellow-300 py-2.5 px-3 text-black text-xs font-semibold ml-2 rounded-md" style="width:fit-content; height: fit-content;">Apply</a>
+                </div>
+
+
+                @*Order Sumamry*@
+                <div class="">
+                    <div class="mb-2 font-medium pb-2 my-2 border-b">Order Summary</div>
+                    <div class="d-flex justify-content-between my-2">
+                        <p>Total</p>
+                        <p>$@Session["TotalCost_one"].00</p>
+                    </div>
+
+                    <div class="d-flex justify-content-between mb-2">
+                        <p>Shipping</p>
+                        <p>$@Session["Shipping_one"].00</p>
+                    </div>
+
+                    <div class="d-flex justify-content-between pb-2 mb-2 border-b">
+                        <p>Discount</p>
+                        <p>$0.00</p>
+                    </div>
+                    <div class="d-flex justify-content-between my-2">
+                        <p>Subtotal</p>
+                        <p>$@Session["Total_order_one"].00</p>
+                    </div>
+
+
+                    <a href="@Url.Action("Buy_now", "Shopping" )" class="btn btn-primary hover:bg-blue-800 w-full rounded-md text-center text-md font-medium py-2 mt-2">Place Order</a>
+                </div>
             </div>
         </div>
     }
 </main>
+
+
+
