--- a/Views/Shopping/ShoppingSuccess.cshtml
+++ b/Views/Shopping/ShoppingSuccess.cshtml
@@ -4,7 +4,9 @@
     ViewBag.Title = "ShoppingSuccess";
 }
 
-
+<div>Email: @(((WebApplication1.Models.customer)Session["Customer"]).email)</div>
+<div>Address: @(((WebApplication1.Models.customer)Session["Customer"]).addresss) @(((WebApplication1.Models.customer)Session["Customer"]).ward) @(((WebApplication1.Models.customer)Session["Customer"]).district) @(((WebApplication1.Models.customer)Session["Customer"]).city) </div>
+<div>Phone: @(((WebApplication1.Models.customer)Session["Customer"]).phone)</div>
 <table class="table">
     <tr>
         <th>
@@ -28,5 +30,28 @@
             </td>
         </tr>
     }
-
 </table>
+<div class="">
+    <div class="mb-2 font-medium pb-2 my-2 border-b">Order Summary</div>
+    <div class="d-flex justify-content-between my-2">
+        <p>Total</p>
+        <p>$@Session["TotalCost"].00</p>
+    </div>
+
+    <div class="d-flex justify-content-between mb-2">
+        <p>Shipping</p>
+        <p>$@Session["Shipping"].00</p>
+    </div>
+
+    <div class="d-flex justify-content-between pb-2 mb-2 border-b">
+        <p>Discount</p>
+        <p>$0.00</p>
+    </div>
+    <div class="d-flex justify-content-between my-2">
+        <p>Subtotal</p>
+        <p>$@Session["Total_order"].00</p>
+    </div>
+
+    <a href="@Url.Action("Index", "Home")" class="px-6 text-white rounded-md bg-blue-600 hover:bg-blue-800 py-2 mx-auto font-medium text-sm">Continuos Shopping</a>
+
+</div>
