--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -53,7 +53,7 @@
                     }
                     @*Search*@
                     <a class="lg:inline-block py-[10px] rounded-xl transition duration-200"
-                       href="@Url.Action("Search", "Home")"><i class="fa-solid fa-magnifying-glass text-black px-3"></i></a>
+                       href="@Url.Action("SearchPage", "Home")"><i class="fa-solid fa-magnifying-glass text-black px-3"></i></a>
 
                     @*Menu*@
                     <a class="lg:inline-block py-[10px] rounded-xl transition duration-200"
