--- a/Views/ShoppingCart/ShowToCart.cshtml
+++ b/Views/ShoppingCart/ShowToCart.cshtml
@@ -43,8 +43,8 @@
                         <div class="col flex flex-wrap w-50">
                             <div class="col grid-rows-4">
                                 <div class="font-medium">@Html.DisplayFor(model => item.Shopping_product.names)</div>
-                                <div class="font-light text-xs">@Html.DisplayFor(model => item.Shopping_product.brand.names)</div>
-                                <div class="font-light text-xs">@Html.DisplayFor(model => item.Shopping_product.color.names)</div>
+                                <div class="font-light text-xs">@Html.DisplayFor(model => item.Shopping_product.brand)</div>
+                                <div class="font-light text-xs">@Html.DisplayFor(model => item.Shopping_product.color)</div>
                                 <a href="/Shopping/Details_Pro/@item.Shopping_product.id_product" class="text-blue-600 font-semibold text-xs mt-4">Learn More 🡥</a>
                             </div>
                         </div>
