--- a/Views/brands/Details.cshtml
+++ b/Views/brands/Details.cshtml
@@ -22,6 +22,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.id_brand }) |
+    @Html.ActionLink("Edit", "Edit", new { id = Model.brand }) |
     @Html.ActionLink("Back to List", "Index")
 </p>
