--- a/Views/brands/Index.cshtml
+++ b/Views/brands/Index.cshtml
@@ -24,9 +24,9 @@
             @Html.DisplayFor(modelItem => item.names)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.id_brand }) |
-            @Html.ActionLink("Details", "Details", new { id=item.id_brand }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.id_brand })
+            @Html.ActionLink("Edit", "Edit", new { id=item.brand }) |
+            @Html.ActionLink("Details", "Details", new { id=item.brand }) |
+            @Html.ActionLink("Delete", "Delete", new { id=item.brand })
         </td>
     </tr>
 }
