--- a/Views/colors/Index.cshtml
+++ b/Views/colors/Index.cshtml
@@ -24,9 +24,9 @@
             @Html.DisplayFor(modelItem => item.names)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.id_color }) |
-            @Html.ActionLink("Details", "Details", new { id=item.id_color }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.id_color })
+            @Html.ActionLink("Edit", "Edit", new { id=item.color }) |
+            @Html.ActionLink("Details", "Details", new { id=item.color }) |
+            @Html.ActionLink("Delete", "Delete", new { id=item.color })
         </td>
     </tr>
 }
