change icon menu

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
                 <a class="text-xl font-extrabold leading-none fst-italic text-black" href="#">
                     W.REX
                 </a>
-                <div class="flex gap-2">
+                <div class="flex space-x-4">
                     @*Dashboard -- temp*@
                     <a class="lg:inline-block py-[10px] rounded-xl transition duration-200"
                        href="@Url.Action("Dashboard", "Home")"><i class="fa-solid fa-user text-black"></i></a>
@@ -33,7 +33,7 @@
 
                     @*Search*@
                     <a class="lg:inline-block py-[10px] rounded-xl transition duration-200"
-                       href="@Url.Action("Search", "Home")"><i class="fa-solid fa-magnifying-glass text-black px-3"></i></a>
+                       href="@Url.Action("Search", "Home")"><i class="fa-solid fa-magnifying-glass text-black"></i></a>
 
                     @*Menu*@
                     <a class="lg:inline-block py-[10px] rounded-xl transition duration-200"
