--- a/Views/products/Create.cshtml
+++ b/Views/products/Create.cshtml
@@ -7,10 +7,13 @@
 
 <h2>Create</h2>
 
-@using (Html.BeginForm()) 
+@*@using (Html.BeginForm()) 
 {
-    @Html.AntiForgeryToken()
-    
+    @Html.AntiForgeryToken()*@
+
+
+@*nếu lỗi, đổi lại đường dẫn: <form action = "/Views/products/Create"...></form>*@
+<form action="/products/Create" method="post" enctype="multipart/form-data">
     <div class="form-horizontal">
         <h4>product</h4>
         <hr />
@@ -23,13 +26,19 @@
             </div>
         </div>
 
-        <div class="form-group">
+        @*<div class="form-group">
             @Html.LabelFor(model => model.images, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.images, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.images, "", new { @class = "text-danger" })
             </div>
+        </div>*@
+
+        @*Tải hình ảnh--------------------------------------*@
+        <div class="form-group">
+            <input type="file" id="uploadimage" name="uploadimage" accept="image/*" />
         </div>
+        @*-------------------------------------------*@
 
         <div class="form-group">
             @Html.LabelFor(model => model.price, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -135,14 +144,17 @@
             </div>
         </div>
 
+
+
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Create" class="btn btn-default" />
             </div>
         </div>
     </div>
-}
+</form>
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
+    @*}*@
+    <div>
+        @Html.ActionLink("Back to List", "Index")
+    </div>
