--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -125,7 +125,7 @@
 
             <div class="flex justify-center text-md">
                 <div class="block max-w-sm rounded-lg bg-white shadow-lg">
-                    <a href="/Shopping/Details_Pro/@item.id_product_seri">
+                    <a href="/Home/Details_Pro_Seri/@item.id_product_seri">
                         @*<a href="#!">*@
                         <img class="rounded-t-lg"
                              src="~/wwwroot/Images/Products/@item.images"
@@ -149,10 +149,10 @@
                             </p>
 
                             <div class="flex flex-row justify-between align-items-center font-semibold">
-                                    <a class="py-2 px-3 py-2 px-3 rounded-2xl bg-blue-600 hover:bg-blue-800 cursor-pointer text-white text-xs" href="/Home/Details_Pro_Seri/@item.id_product_seri">
+                                    @*<a class="py-2 px-3 py-2 px-3 rounded-2xl bg-blue-600 hover:bg-blue-800 cursor-pointer text-white text-xs" href="/Home/Details_Pro_Seri/@item.id_product_seri">
                                         Details
-                                    </a>
-                                    <a href="#" class="text-blue-600 font-light">Learn More 🡥</a>
+                                    </a>*@
+                                    @*<a href="#" class="text-blue-600 font-light">Learn More 🡥</a>*@
                                 </div>
 
                         </div>
