--- a/Views/Home/SearchPage.cshtml
+++ b/Views/Home/SearchPage.cshtml
@@ -13,7 +13,7 @@
         <p>Surf for more</p>
 
         <div class="align-content-center align-self-center">
-            <input type="text" class="font-light text-gray-400 bg-white border-b py-2" style="padding-right: 400px; padding-left:20px" placeholder="Search" name="searching" />
+            <input type="text" class="font-light text-gray-400 bg-white border-b py-2" style="padding-right: 400px; padding-left:20px" value="" placeholder="Search" name="searching" />
             <input class="p-3 mx-2 text-center font-medium text-xs fa-solid fa-search" type="submit" value="Search">
             @*<i class="fa-solid fa-search"></i>
                 <input type="submit" value="Search" />*@
@@ -310,12 +310,12 @@
                                 </a>
                                 <div class="p-3 font-medium">
                                     @*<div class="flex flex-row justify-between pb-3 border-bottom">
-                                        <p>$@Html.DisplayFor(modelItem => item.price)</p>
-                                        <div class="flex flex-row">
-                                            <p class="px-2">@Html.DisplayFor(modelItem => item.rate)</p>
-                                            <i class="fa-solid fa-star text-warning"></i>
-                                        </div>
-                                    </div>*@
+                                            <p>$@Html.DisplayFor(modelItem => item.price)</p>
+                                            <div class="flex flex-row">
+                                                <p class="px-2">@Html.DisplayFor(modelItem => item.rate)</p>
+                                                <i class="fa-solid fa-star text-warning"></i>
+                                            </div>
+                                        </div>*@
 
                                     <h5 class="mt-4 mb-3  leading-tight text-neutral-800 dark:text-neutral-50">
                                         @Html.DisplayFor(modelItem => item.name_seri)
