--- a/Views/products/Details.cshtml
+++ b/Views/products/Details.cshtml
@@ -24,7 +24,7 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.images)
+            <img src="~/wwwroot/Images/Products/@Html.DisplayFor(model=>model.images)" class="h-10" />
         </dd>
 
         <dt>
