--- a/Views/Home/Details_Pro_Seri.cshtml
+++ b/Views/Home/Details_Pro_Seri.cshtml
@@ -18,7 +18,7 @@
             {
                 <div class="w-75 grid grid-cols-4 grid-rows-2 mx-auto">
                     <div class="col-span-2 m-4">
-                        <img src="~/@item.images"
+                        <img src="~/wwwroot/Images/Products/@item.images"
                              class="w-full object-cover object-center mb-3">
                         <div>
                             <h3 class="font-medium text-gray-900">Highlights</h3>
