--- a/Views/Home/YourOrders.cshtml
+++ b/Views/Home/YourOrders.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<WebApplication1.Models.order_item>
+﻿@model IEnumerable<WebApplication1.Models.order>
 @{
     ViewBag.Title = "YourOrders";
 }
@@ -8,55 +8,84 @@
 <div>Email: @(((WebApplication1.Models.customer)Session["Customer"]).email)</div>
 <div>Address: @(((WebApplication1.Models.customer)Session["Customer"]).addresss) @(((WebApplication1.Models.customer)Session["Customer"]).ward) @(((WebApplication1.Models.customer)Session["Customer"]).district) @(((WebApplication1.Models.customer)Session["Customer"]).city) </div>
 <div>Phone: @(((WebApplication1.Models.customer)Session["Customer"]).phone)</div>
+<table class="table">
+    <tr>
+        <th>
+            Mã đơn hàng
+        </th>
+        <th>
+            Ngày đặt
+        </th>
+        <th>
+            Ngày vận chuyển
+        </th>
+        <th>
+            Ngày gửi đến
+        </th>
+        <th>
+            Tình trạng xử lý
+        </th>
+        <th>
+            Tình trạng vận chuyển
+        </th>
+        <th>
+            Tình trạng đơn hàng
+        </th>
+        <th>
+            Tình trạng đổi trả
+        </th>
+        <th>
+            Huỷ đơn hàng
+        </th>
+        <th>
+            Tổng đơn hàng
+        </th>
+        <th></th>
+    </tr>
 
-@if (Model.Count() == 0)
-{
-    <div>
-        SORRY, WE CAN NOT FIND ANYTHING YOU NEED
-    </div>
-}
-else if (Model.Count() != 0)
-{
-    foreach (var item in Model)
+    @foreach (var item in Model)
     {
-        <table class="table">
-            <tr>
-                <th>
-                    @Html.DisplayNameFor(model => model.product.names)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.quantity)
-                </th>
-                <th></th>
-            </tr>
 
+        <tr>
 
-            <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.id_order)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.created_at)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.started_at)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.finished_at)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.pending)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.delivering)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.successed)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.paid)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.canceled)
+            </td>
+            <td>
+                $@Html.DisplayFor(modelItem => item.total_price)
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id = item.id_order }) |
+                @Html.ActionLink("Details", "Details", new { id = item.id_order }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.id_order })
 
-                <td>
-                    @Html.DisplayFor(modelItem => item.product.names)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.quantity)
-                </td>
-            </tr>
+            </td>
+        </tr>
 
-        </table>
-        <div class="">
-            <div class="mb-2 font-medium pb-2 my-2 border-b">Order Summary</div>
-            <div class="d-flex justify-content-between mb-2">
-                <p>Shipping</p>
-                <p>$@Html.DisplayFor(modelItem => item.order.shipping_fee).00</p>
-            </div>
-            <div class="d-flex justify-content-between pb-2 mb-2 border-b">
-                <p>Discount</p>
-                <p>$0.00</p>
-            </div>
-            <div class="d-flex justify-content-between my-2">
-                <p>Subtotal</p>
-                <p>$@Html.DisplayFor(modelItem => item.order.total_price)</p>
-            </div>
-        </div>
     }
-    <a href="@Url.Action("Index", "Home")" class="px-6 text-white rounded-md bg-blue-600 hover:bg-blue-800 py-2 mx-auto font-medium text-sm">Continuos Shopping</a>
-}
+</table>
+<a href="@Url.Action("Index", "Home")" class="px-6 text-white rounded-md bg-blue-600 hover:bg-blue-800 py-2 mx-auto font-medium text-sm">Countious Shopping</a>
