--- a/Views/Shopping/CheckOut.cshtml
+++ b/Views/Shopping/CheckOut.cshtml
@@ -1,8 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "CheckOut";
-      Layout = "../../Views/Shared/_AdminLayout.cshtml";
+    Layout = "../../Views/Shared/_Layout.cshtml";
 }
 
-<h2>CheckOut</h2>
 
