--- a/Views/Shopping/ShoppingSuccess.cshtml
+++ b/Views/Shopping/ShoppingSuccess.cshtml
@@ -45,11 +45,11 @@
 
     <div class="d-flex justify-content-between pb-2 mb-2 border-b">
         <p>Discount</p>
-        <p>$0.00</p>
+        <p>$@Session["discount"].00</p>
     </div>
     <div class="d-flex justify-content-between my-2">
         <p>Subtotal</p>
-        <p>$@Session["Total_order"].00</p>
+        <p>$@Session["Total_order_new"].00</p>
     </div>
 
     <a href="@Url.Action("Index", "Home")" class="px-6 text-white rounded-md bg-blue-600 hover:bg-blue-800 py-2 mx-auto font-medium text-sm">Continuos Shopping</a>
