--- a/Views/User/Details_Info.cshtml
+++ b/Views/User/Details_Info.cshtml
@@ -11,7 +11,7 @@
                 <ul class="space-y-2">
                     <li>
                         <div href="#" class="items-center p-2 text-base font-normal text-gray-900 rounded-lg">
-                            <img class="relative h-75 w-75 ms-2 mb-3 rounded-lg" src="https://i.pinimg.com/564x/64/cf/6f/64cf6f2685b6939f1a9418289c3dd647.jpg" />
+                            <img class="relative h-75 w-75 ms-2 mb-3 rounded-lg" src="~/wwwroot/Images/Avatars/@Html.DisplayFor(model=>model.avatar)" />
                             <div class="ml-3">@Html.DisplayFor(model => model.names)</div>
                         </div>
                     </li>
@@ -21,7 +21,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="@Url.Action("Order", "Home")" class="flex items-center p-2 text-base font-normal text-gray-900 rounded-lg hover:bg-blue-100 hover:text-blue-500">
+                        <a href="@Url.Action("Orders", "User", new {id = Html.DisplayFor(model => model.id_user)})" class="flex items-center p-2 text-base font-normal text-gray-900 rounded-lg hover:bg-blue-100 hover:text-blue-500">
                             <span class="flex-1 ml-3 whitespace-nowrap">Orders</span>
                         </a>
                     </li>
