--- a/Views/User/Edit_Info.cshtml
+++ b/Views/User/Edit_Info.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Edit_Info";
 }
 
-@using (Html.BeginForm())
+@using (Html.BeginForm("Edit_Info", "User", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
@@ -17,7 +17,7 @@
                     <ul class="space-y-2">
                         <li>
                             <div href="#" class="items-center p-2 text-base font-normal text-gray-900 rounded-lg">
-                                <img class="relative h-75 w-75 ms-2 mb-3 rounded-lg" src="https://i.pinimg.com/564x/64/cf/6f/64cf6f2685b6939f1a9418289c3dd647.jpg" />
+                                <img class="relative h-75 w-75 ms-2 mb-3 rounded-lg" src="~/wwwroot/Images/Avatars/@Html.DisplayFor(model => model.avatar)" />
                                 <div class="ml-3">@Html.DisplayFor(model => model.names)</div>
                             </div>
                         </li>
@@ -89,17 +89,20 @@
                             @Html.ValidationMessageFor(model => model.passwords, "", new { @class = "text-danger" })
                         </p>
                     </div>
-                </div>
-                @*<div class="flex w-full justify-between my-4">
-                        <div class="text-start">
-                            <div class="text-lg font-bold my-2">Address</div>
-                            <p>44-46 Pasteur, Ben Nghe, District 1, Ho Chi Minh City</p>
+                    <div class="text-start">
+                        <div class="text-lg font-bold my-2">
+                            Avatart
+                            <a href="#"><i class="fa-regular fa-pen-to-square ms-3"></i></a>
                         </div>
-                    </div>*@
+                        <p>
+                            @Html.EditorFor(model => model.avatar, new { htmlAttributes = new { @class = "form-control", @type = "file" } })
+                            @Html.ValidationMessageFor(model => model.avatar, "", new { @class = "text-danger" })
+                        </p>
+                    </div>
+                </div>
+
                 <div class="flex w-full justify-between my-4">
                     <div class="text-start">
-                        <div class="text-lg font-bold my-2">Image</div>
-                        <p>Upload your image</p>
                     </div>
                 </div>
                 <div class="w-40">
