--- a/Views/products/Index.cshtml
+++ b/Views/products/Index.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "Index";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
 <h2>Index</h2>
@@ -66,7 +66,7 @@
             @Html.DisplayFor(modelItem => item.names)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.images)
+            <img src="~/wwwroot/Images/Products/@Html.DisplayFor(modelItem=>item.images)"   class="h-10"/>
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.price)
