--- a/Views/Home/SearchPage.cshtml
+++ b/Views/Home/SearchPage.cshtml
@@ -326,7 +326,7 @@
                                     </p>
 
                                     <div class="flex flex-row justify-between align-items-center font-semibold">
-                                        <a class="py-2 px-3 py-2 px-3 rounded-2xl bg-blue-600 hover:bg-blue-800 cursor-pointer text-white text-xs" href="/Shopping/Details_Pro/@item.id_product_seri">
+                                        <a class="py-2 px-3 py-2 px-3 rounded-2xl bg-blue-600 hover:bg-blue-800 cursor-pointer text-white text-xs" href="/Home/Details_Pro_Seri/@item.id_product_seri">
                                             Details
                                         </a>
                                         <a href="#" class="text-blue-600 font-light">Learn More 🡥</a>
