--- a/Views/Shopping/Details_Pro.cshtml
+++ b/Views/Shopping/Details_Pro.cshtml
@@ -15,7 +15,7 @@
             </div>
             <div class="w-75 grid grid-cols-4 grid-rows-2 mx-auto">
                 <div class="col-span-2 m-4">
-                    <img src="~/@Html.DisplayFor(model => model.images)"
+                    <img src="~/wwwroot/Images/Products/@Html.DisplayFor(model => model.images)"
                          class="w-full object-cover object-center mb-3">
                     <div>
                         <h3 class="font-medium text-gray-900">Highlights</h3>
